tests/fixtures/diagnostics/compile-undefined-operation.ascii.stderr
Error: Undefined operation "1px + #fff".
  ,
2 |   width: 1px + #fff;
  |          ^^^^^^^^^^
  '
  compile-undefined-operation.scss 2:10  root stylesheet
